--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ django-cors-headers==3.5.0
 django-heroku==0.3.1
 django-storages==1.10.1
 djangorestframework==3.11.1
+djangorestframework-simplejwt==4.4.0
 gunicorn==20.0.4
 jmespath==0.10.0
 Pillow==7.2.0
+PyJWT==1.7.1
 python-dateutil==2.8.1
 psycopg2==2.8.6
 pytz==2020.1
